--- a/style.css
+++ b/style.css
@@ -20,15 +20,15 @@ body {
     height: 100vh;
 }
 
-/* Menú lateral izquierdo */
+/* Menú que ocupa todo el lado izquierdo */
 .menu {
-    width: 25%;
-    height: 100%;
+    width: 25%; /* Ocupa el 25% del ancho de la pantalla */
+    height: 100vh; /* Altura completa */
 }
 
 .menu-frame {
     width: 100%;
-    height: 100%;
+    height: 100%; /* Ocupar todo el contenedor */
     border: none;
 }
 
